@@ -3,6 +3,7 @@
 	* Fixed bug: Information whether page is marked dirty is missing in info module
 	* Added feature: Integrate possibility to remove all expired pages in the info module
 	* Added feature: Moved rendering of rows in info module to own method to be overridable by XCLASSes
+	* Cleanup: Refactored clean dirty pages parts
 
 2009-06-12  Oliver Hader  <oliver@typo3.org>
 
